--- a/public/mobile-assets/style.css
+++ b/public/mobile-assets/style.css
@@ -1206,6 +1206,7 @@ textarea:invalid {
   position: fixed;
   z-index: 1000;
   width: 100%;
+  padding: 0 0 12px 0;
   left: 0;
   bottom: 0;
   -webkit-box-shadow: 0 0 8px rgba(15, 15, 15, 0.15);
